plugins/JavaFX/testData/highlighting/Private.fx
<error descr="The 'private' keyword is no longer supported. The default access is script-private, so you can simply remove 'private'.">private</error> var a = 3;
